internal/caronte/contract/extract/gohttp/stdlib/testdata/invalid_syntax/main.go.bad
package main

import "net/http"

func main() {
	http.HandleFunc(
	"/x", nil
}
